--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ body{
    padding-bottom: 94px;
 }
 
+a {
+   display: block;
+}
+
 img{
    display: block;
    max-width: 100%;
@@ -440,7 +444,7 @@ color: var(--white-color);
 .partner-link:hover,
 .partner-link:focus{
    color: var(--accent-color);
-   border: solid var(--accent-color);
+   border: 1px solid var(--accent-color);
 }
 
 /* Футер */
@@ -501,19 +505,25 @@ color: var(--white-color);
    color: var(--white-color);
 }
 
-.actions.holder li{
+.holder-icon {
+   height: 22px;
+   width: 22px;
+   fill: var(--white-color);
+}
+
+/* .actions.holder li{
    background-color: rgb(255, 255, 255, 0.1);
    border-radius: 50%;
-}
+} */
 
 /* Портфолио */
 
-.list.page{
+.card-list{
    display: flex;
    flex-wrap: wrap;
 }
 
-.page .item{
+.cards-item{
    width: calc((100% - 60px)/3);
    margin-right: 30px;
    border: 1px solid #EEEEEE;
@@ -521,21 +531,22 @@ color: var(--white-color);
 }
 
 
-.item .link:focus{
+.link-card:focus,
+.link-card:hover{
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
    0px 4px 4px rgba(0, 0, 0, 0.06), 
    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.page .item:nth-child(3n){
+.cards-item:nth-child(3n){
    margin-right: 0px;
 }
 
-.page .item:nth-last-child(-n+3) {
+.cards-item:nth-last-child(-n+3) {
    margin-bottom: 0px;
 }
 
-.page .features-title{
+.card-list .features-title{
    margin-bottom: 4px;
 
    text-transform: none;
@@ -543,7 +554,8 @@ color: var(--white-color);
    line-height: 2;
    letter-spacing: 0.06em;
 } 
-.page p{
+
+.card-description{
    margin-top: 0;
    margin-bottom: 0;
 
@@ -552,7 +564,8 @@ color: var(--white-color);
    font-size: 16px;
    line-height: 1.87;
 }
-.content{
-   margin: 20px 24px;
+
+.card-thumb{
+   padding: 20px 24px;
 }
 
