--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,7 @@ color: var(--accent-color);
    border-radius: 50%;
 
    color: var(--icon-colors);
+   background-color: rgba(255, 255, 255, 0.1);
 }
 
 .actions-link:hover,
@@ -510,11 +511,6 @@ color: var(--white-color);
    width: 22px;
    fill: var(--white-color);
 }
-
-/* .actions.holder li{
-   background-color: rgb(255, 255, 255, 0.1);
-   border-radius: 50%;
-} */
 
 /* Портфолио */
 
